Better mlp and plot word embs

--- a/notebooks/word_level/03_mlp.ipynb
+++ b/notebooks/word_level/03_mlp.ipynb
@@ -53,8 +53,13 @@
     "from torch.nn import functional as F\n",
     "import torch.nn as nn\n",
     "\n",
+    "from whatlies import EmbeddingSet, Embedding\n",
+    "from whatlies.transformers import Pca\n",
+    "import altair\n",
+    "\n",
     "np.set_printoptions(precision=4)\n",
     "sns.set_style(\"darkgrid\")\n",
+    "altair.data_transformers.disable_max_rows()\n",
     "%matplotlib inline\n",
     "\n",
     "seed = 2468975301\n",
@@ -116,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9a6ccf6-aaaa-4406-9a38-c8cfab90bfe6",
+   "id": "c604bbbe-6fa4-449b-a3f8-e98913020a86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,16 +136,8 @@
     "      Y.append(idx)\n",
     "      context = context[1:] + [idx]\n",
     "  \n",
-    "  return torch.tensor(X, device=device), torch.tensor(Y, device=device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdd9c2d6-3ce2-4741-95a9-9bc7ad442252",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "  return torch.tensor(X, device=device), torch.tensor(Y, device=device)\n",
+    "\n",
     "def split_datasets(X, Y, train_pct=0.8, dev_pct=0.1, device='cpu'):\n",
     "  X = X.to(device)\n",
     "  Y = Y.to(device)\n",
@@ -152,35 +149,31 @@
     "  n2 = int((train_pct+dev_pct)*len(idxs))\n",
     "  \n",
     "\n",
-    "  return X[idxs[:n1]],Y[idxs[:n1]],X[idxs[n1:n2]],Y[idxs[n1:n2]],X[idxs[n2:]],Y[idxs[n2:]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f026ff0e-7c69-4fc7-80ac-c5bb4a5862d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "  return X[idxs[:n1]],Y[idxs[:n1]],X[idxs[n1:n2]],Y[idxs[n1:n2]],X[idxs[n2:]],Y[idxs[n2:]]\n",
+    "\n",
     "def chunks(lst, n):\n",
     "  \"\"\"Yield successive n-sized chunks from lst.\"\"\"\n",
     "  for i in range(0, len(lst), n):\n",
     "    yield lst[i:i + n]\n",
     "\n",
-    "def calc_loss(X, Y, params, batch_size):\n",
+    "def calc_loss(X, Y, params, batch_size, log10=False):\n",
     "  C,W1,b1,W2,b2 = params\n",
     "  n_batches = 0\n",
-    "  loss = 0\n",
+    "  batch_loss = 0\n",
     "  \n",
     "  for chunk in chunks(range(len(X)), batch_size):\n",
     "    idxs = list(chunk)\n",
     "    emb = C[X[idxs]]\n",
     "    h = torch.tanh(emb.view(-1, input_dim) @ W1 + b1) \n",
-    "    logits = h @ W2 + b2\n",
-    "    loss += F.cross_entropy(logits, Y[idxs])\n",
+    "    logits = h @ W2 + b2    \n",
+    "    loss = F.cross_entropy(logits, Y[idxs])\n",
+    "    if log10:\n",
+    "      batch_loss += loss.log10()\n",
+    "    else:\n",
+    "      batch_loss += loss\n",
     "    n_batches += 1\n",
     "  \n",
-    "  return (loss/n_batches).item()"
+    "  return (batch_loss/n_batches).item()"
    ]
   },
   {
@@ -446,11 +439,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "  emb = C[X]\n",
-    "  h = torch.tanh(emb.view(-1, input_dim) @ W1 + b1) \n",
-    "  logits = h @ W2 + b2\n",
-    "  loss = F.cross_entropy(logits, Y)  \n",
-    "  print(f'{loss.item():0.4f}')"
+    "emb = C[X]\n",
+    "h = torch.tanh(emb.view(-1, input_dim) @ W1 + b1) \n",
+    "logits = h @ W2 + b2\n",
+    "loss = F.cross_entropy(logits, Y)  \n",
+    "print(f'{loss.item():0.4f}')"
    ]
   },
   {
@@ -460,7 +453,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1,1,figsize=(10, 8))\n",
+    "fig, ax = plt.subplots(1,1,figsize=(5, 4))\n",
     "ax.plot(lri, lossi)"
    ]
   },
@@ -481,7 +474,7 @@
    "source": [
     "block_size = 3 # contenxt length: how many characters do we take to predict the next character\n",
     "emb_size = 30\n",
-    "hidden_dim = 150\n",
+    "hidden_dim = 100\n",
     "input_dim = block_size * emb_size\n",
     "batch_size = 4096\n",
     "training_loss, dev_loss = [],[]\n",
@@ -507,7 +500,7 @@
    "outputs": [],
    "source": [
     "lossi = []\n",
-    "lre = torch.linspace(-3, 1, 1000)\n",
+    "lre = torch.linspace(-3, 1, 5000)\n",
     "\n",
     "first_run = True\n",
     "g = torch.Generator(device=device).manual_seed(seed)\n",
@@ -546,8 +539,10 @@
     "  X_train,Y_train,X_dev,Y_dev = X_train.to(device),Y_train.to(device),X_dev.to(device),Y_dev.to(device)\n",
     "  C,W1,b1,W2,b2 = C.to(device),W1.to(device),b1.to(device),W2.to(device),b2.to(device)\n",
     "  params = [C,W1,b1,W2,b2]\n",
+    "  \n",
+    "reg_term = 0.  \n",
     "\n",
-    "for i in range(1000):\n",
+    "for i in range(5000):\n",
     "  idx = torch.randint(0, len(X_train), (batch_size, ))\n",
     "  \n",
     "  # forward pass\n",
@@ -579,32 +574,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1,1,figsize=(10, 8))\n",
+    "fig, ax = plt.subplots(1,1,figsize=(5, 4))\n",
     "ax.plot(range(len(lossi)), torch.tensor(lossi))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3565bdc0-1cf2-450a-bb53-eacb8a01958c",
+   "id": "0bfeb014-d477-4660-8d45-5df713755e3e",
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train,Y_train,X_dev,Y_dev = X_train.cpu(),Y_train.cpu(),X_dev.cpu(),Y_dev.cpu()\n",
-    "params = [p.cpu() for p in params]"
+    "params = [p.cpu() for p in params]\n",
+    "\n",
+    "training_loss.append(np.round(calc_loss(X_train, Y_train, params, batch_size), 3))\n",
+    "dev_loss.append(np.round(calc_loss(X_dev, Y_dev, params, batch_size), 3))\n",
+    "print(f'Training Loss: {training_loss[-1]}')\n",
+    "print(f'Dev Loss: {dev_loss[-1]}')\n",
+    "\n",
+    "fig, ax = plt.subplots(1,1,figsize=(5, 4))\n",
+    "sns.lineplot(ax=ax, data=pd.DataFrame([training_loss, dev_loss], index=['Training', 'Dev']).T)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f943ab9b-6897-44b4-8d13-d1af02d73d99",
+   "id": "825510d7-3afa-4ff6-89e9-25561b0ccc2e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_loss.append(np.round(calc_loss(X_train, Y_train, params, batch_size), 3))\n",
-    "dev_loss.append(np.round(calc_loss(X_dev, Y_dev, params, batch_size), 3))\n",
-    "print(f'Training Loss: {training_loss[-1]}')\n",
-    "print(f'Dev Loss: {dev_loss[-1]}')"
+    "np.diff(training_loss), np.diff(dev_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a3d527b-41e3-426c-83f6-35cb7e9f67d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1,1,figsize=(5, 4))\n",
+    "ax.plot(lre, lossi)"
    ]
   },
   {
@@ -621,55 +632,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2856391f-9ba5-48df-b34f-347498273cf3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.lineplot(data=pd.DataFrame([training_loss, dev_loss], index=['Training', 'Dev']).T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a3d527b-41e3-426c-83f6-35cb7e9f67d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(1,1,figsize=(10, 8))\n",
-    "ax.plot(lre, lossi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2500ddea-e30c-42e2-9e13-6f73c68a9a5d",
    "metadata": {},
    "outputs": [],
    "source": [
     "torch.save([C.cpu(), W1.cpu(), b1.cpu(), W2.cpu(), b2.cpu()], f'{model_dir}/mlp.pt')\n",
-    "pickle.dump(log_lossi, open(f'{model_dir}/training_loss.pl', 'wb'))"
+    "pickle.dump(lossi, open(f'{model_dir}/training_loss.pl', 'wb'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a85b3b6-a958-4b25-bc28-0d01981dd2b0",
+   "id": "fea63995-f1ad-491a-b135-fb0d3d87dbee",
    "metadata": {},
    "outputs": [],
    "source": [
     "params = torch.load(f'{model_dir}/mlp.pt')\n",
-    "log_lossi = pickle.load(open(f'{model_dir}/training_loss.pl', 'rb'))"
+    "lossi = pickle.load(open(f'{model_dir}/training_loss.pl', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8a912c9-63e7-4bd1-b0ba-711f9b01a2d9",
+   "metadata": {},
+   "source": [
+    "## Inference"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ec98625-dcd5-4273-aeb6-6fea700cb01b",
+   "id": "33f197ce-70b0-4528-b9bf-6a59e5f28b38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1,1,figsize=(10, 8))\n",
-    "ax.plot(range(len(log_lossi)), log_lossi)"
+    "block_size = 3 # contenxt length: how many characters do we take to predict the next character\n",
+    "emb_size = 30\n",
+    "hidden_dim = 100\n",
+    "input_dim = block_size * emb_size\n",
+    "batch_size = 4096\n",
+    "training_loss, dev_loss = [],[]\n",
+    "X,Y = build_dataset(texts, stoi)\n",
+    "\n",
+    "X_train,Y_train,X_dev,Y_dev,X_test,Y_test = split_datasets(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd2c43cb-b005-453e-b38c-e9f8a6d0bf69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = torch.load(f'{model_dir}/mlp.pt')\n",
+    "C, W1, b1, W2, b2 = params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2faed0a8-a195-4f79-9e01-64da85ee4762",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Training Loss: {np.round(calc_loss(X_train, Y_train, params, batch_size), 3)}')\n",
+    "print(f'Dev Loss: {np.round(calc_loss(X_dev, Y_dev, params, batch_size), 3)}')\n",
+    "print(f'Test Loss: {np.round(calc_loss(X_test, Y_test, params, batch_size), 3)}')"
    ]
   },
   {
@@ -677,21 +705,39 @@
    "id": "749b3901-343f-4e78-a691-c0e1bb2fa86e",
    "metadata": {},
    "source": [
-    "## Plot the embedding"
+    "### Plot the embedding"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8609e13-8140-411d-986c-de9b8d69cab0",
+   "id": "8b12b2f6-6376-451b-a1b7-64f067ee0ff0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1,1,figsize=(10, 8))\n",
-    "ax.scatter(C[:, 0].data, C[:, 1].data, s=200)\n",
-    "for i in range(C.shape[0]):\n",
-    "  ax.text(C[i, 0].item(), C[i, 1].item(), itos[i], ha='center', va='center', color='white')\n",
-    "  ax.grid('minor')"
+    "emb_matrix = C.detach().numpy()\n",
+    "idxs = np.append(np.random.choice(range(2, len(emb_matrix)), size=500), [0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8458918-54a2-4885-966d-d5650b7104a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emb = EmbeddingSet({itos[i]: Embedding(itos[i], emb_matrix[i]) for i in idxs})\n",
+    "pca = emb.transform(Pca(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73fc0353-7da3-459d-ae25-27b50f6b95d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca.plot_interactive(axis_metric='cosine_similarity', )"
    ]
   },
   {
@@ -701,17 +747,7 @@
     "tags": []
    },
    "source": [
-    "## Sample from the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7d846ec-a545-4cbe-ad54-d66a442e2510",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "C, W1, b1, W2, b2 = C.cpu(), W1.cpu(), b1.cpu(), W2.cpu(), b2.cpu()"
+    "### Sample from the model"
    ]
   },
   {
@@ -725,7 +761,8 @@
    "source": [
     "g = torch.Generator().manual_seed(seed)\n",
     "n_headlines = 20\n",
-    "for _ in range(n_headlines):  \n",
+    "while n_headlines != 0:\n",
+    "# for _ in range(n_headlines):  \n",
     "  ai_onion = []\n",
     "  context = [0] * block_size # initialize with all ###\n",
     "  while True:\n",
@@ -736,10 +773,12 @@
     "    idx = torch.multinomial(probs, num_samples=1, replacement=True, generator=g).item()\n",
     "    context = context[1:] + [idx]\n",
     "    ai_onion.append(itos[idx])\n",
-    "    # if idx == 0 or len(ai_onion) > np.random.randint(50, 100):\n",
     "    if idx == 0:\n",
     "      break\n",
-    "  print(' '.join(ai_onion[:-1]))"
+    "  text = ' '.join(ai_onion[:-1])\n",
+    "  if len(text.split()) != 0:\n",
+    "    print(text)\n",
+    "    n_headlines -= 1"
    ]
   }
  ],
